--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,29 @@
 
 @font-face {
     font-family: 'noto-kor-ii';
-    src: url('../assets/fonts/noto-kor/NotoSansCJKkr-Thin.otf');
+    /* src: url('/assets/fonts/noto-kor/NotoSansCJKkr-Thin.otf'); */
+    src:url('/assets/fonts/noto-kor-min/NotoSansKR-Thin.woff2');
     font-weight: normal;
     font-style: normal;
 }
 @font-face {
     font-family: 'noto-kor-i';
-    src: url('../assets/fonts/noto-kor/NotoSansCJKkr-Light.otf');
+    /* src: url('/assets/fonts/noto-kor/NotoSansCJKkr-Light.otf'); */
+    src:url('/assets/fonts/noto-kor-min/NotoSansKR-Light.woff2');
     font-weight: normal;
     font-style: normal;
 }
 @font-face {
     font-family: 'noto-kor';
-    src: url('../assets/fonts/noto-kor/NotoSansCJKkr-Regular.otf');
+    /* src: url('/assets/fonts/noto-kor/NotoSansCJKkr-Regular.otf'); */
+    src:url('/assets/fonts/noto-kor-min/NotoSansKR-Regular.woff2');
     font-weight: normal;
     font-style: normal;
 }
 @font-face {
     font-family: 'noto-kor-b';
-    src: url('../assets/fonts/noto-kor/NotoSansCJKkr-Bold.otf');
+    /* src: url('/assets/fonts/noto-kor/NotoSansCJKkr-Bold.otf'); */
+    src:url('/assets/fonts/noto-kor-min/NotoSansKR-Bold.woff2');
     font-weight: normal;
     font-style: normal;
 }
@@ -27,28 +31,28 @@
 @font-face {
     font-family: 'noto-eng';
     /* src: url('fonts/noto-mono/NotoSansMono-ExtraCondensed.ttf'); */
-    src:url('../assets/fonts/noto-sans/NotoSans-Regular.ttf');
+    src:url('/assets/fonts/noto-sans/NotoSans-Regular.ttf');
     font-weight: normal;
     font-style: normal;
 }
 @font-face {
     font-family: 'noto-eng-b';
     /* src: url('fonts/noto-mono/NotoSansMono-ExtraCondensedExtraBold.ttf'); */
-    src:url('../assets/fonts/noto-sans/NotoSans-Bold.ttf');
+    src:url('/assets/fonts/noto-sans/NotoSans-Bold.ttf');
     font-weight: 600;
     font-style: normal;
 }
 @font-face {
     font-family: 'noto-eng-i';
     /* src: url('fonts/noto-mono/NotoSansMono-ExtraCondensedLight.ttf'); */
-    src:url('../assets/fonts/noto-sans/NotoSans-Light.ttf');
+    src:url('/assets/fonts/noto-sans/NotoSans-Light.ttf');
     font-weight: normal;
     font-style: italic;
 }
 @font-face {
     font-family: 'noto-eng-ii';
     /* src: url('fonts/noto-mono/NotoSansMono-ExtraCondensedLight.ttf'); */
-    src:url('../assets/fonts/noto-sans/NotoSans-ExtraLight.ttf');
+    src:url('/assets/fonts/noto-sans/NotoSans-ExtraLight.ttf');
     font-weight: normal;
     font-style: italic;
 }
@@ -68,7 +72,6 @@ img {
     display:block;
 }
 /* Header and Footer */
-._thumbnail,
 header,
 footer {
     z-index: 900;
@@ -78,7 +81,6 @@ footer {
     background: no-repeat center fixed;
     background-size: cover;
 }
-._thumbnail *,
 header *{
     position: absolute;
 }
@@ -174,19 +176,31 @@ footer ._footer-line{
     /* top: 50px; */
     text-align:center;
 }
+footer ._footer-line h1{
+    font-family: 'noto-eng', 'noto-kor';
+    font-size: 12pt!important;
+    color: white;
+    text-align: center;
+    position: relative;
+    display: block;
+    margin:auto;
+    margin-bottom:10px;
+}
 footer ._footer-line a{
     margin:auto;
-    font-family: 'noto-eng-i', 'noto-kor-i';
-    font-weight: 600;
-    font-size: 11pt;
+    /* font-family: 'noto-eng-i', 'noto-kor-i'; */
+    /* font-weight: 600; */
+    /* font-size: 11pt; */
     color: white;
     text-align: center;
     position: relative;
     display: inline-block;
     text-decoration: none;
+    font-family:inherit;
+    font-size:inherit;
     border-bottom: 1pt solid rgba(0,0,0,0);
     padding-bottom:3px;
-    margin-bottom:13px;
+    /* margin-bottom:13px; */
     text-align:center;
 }
 footer ._footer-line a:hover{
@@ -195,7 +209,7 @@ footer ._footer-line a:hover{
 }
 footer ._footer-line p{
     font-family: 'noto-eng-i', 'noto-kor-i';
-    font-size: 8pt!important;
+    font-size: 8pt;
     color: white;
     text-align: center;
     position: relative;
@@ -279,6 +293,7 @@ footer ._goto-top:hover {
 
 
 ._contents{
+    width:100%;
     position:relative;
     margin:0;padding:0;
 }
@@ -362,7 +377,8 @@ footer ._goto-top:hover {
     transition-delay: 0.8s;
 }
 ._nav-bar:hover ._nav-menu{
-    background-color: rgba(255,255,255,0.7);
+    /* background-color: rgba(255,255,255,0.7); */
+    background-color: rgba(253,253,253,0.8);
 }
 ._nav-bar:hover ._nav-menu > li{
     color: rgba(0,0,0,1);
@@ -377,11 +393,11 @@ footer ._goto-top:hover {
     background: rgba(50,50,50,1);
     color: #fafafa!important;
 }
-._nav-bar-collapse .section-updown, ._nav-bar-collapse2 .section-updown{display:none!important}
-._nav-bar-fix .section-updown{position:fixed;right:3%;bottom:20px;width:95px;display:flex;margin-top:5px;z-index:500}
-._nav-bar .section-up,
-._nav-bar .section-down{
-    width:45px;height:25px;
+/* ._nav-bar-collapse .section-updown, ._nav-bar-collapse2 .section-updown{display:none!important} */
+.section-updown{position:fixed;right:3%;bottom:20px;width:95px;display:flex;margin-top:5px;z-index:899}
+.section-up,
+.section-down{
+    width:30px;height:25px;
     border-radius:5px;
     background:rgba(24,24,30,0.8);
     margin:auto;
@@ -390,10 +406,21 @@ footer ._goto-top:hover {
     text-align:center;
     font-family: 'noto-eng', 'noto-kor';
 }
-._nav-bar .section-up{
+.section-top{
+    width:25px;height:25px;
+    border-radius:5px;
+    background:rgba(24,24,30,0.6);
+    margin:auto;
+    cursor:pointer;
+    color:#fffff4;
+    text-align:center;
+    font-family: 'noto-eng', 'noto-kor';
+}
+
+.section-up{
     margin-left:0;
 }
-._nav-bar .section-down{
+.section-down{
     margin-right:0;
 }
 
@@ -415,25 +442,25 @@ footer ._goto-top:hover {
 
 /* Section Layout */
 .big-piece{
-    width:740px;
+    width:740px!important;
     margin:auto;
     margin-bottom:80px;
     display:block;
 }
 .wider-piece{
-    width:1000px;
+    width:980px!important;
     margin:auto;
     margin-bottom:80px;
     display:block;
 }
 .wide-piece{
-    width:850px;
+    width:850px!important;
     margin:auto;
     margin-bottom:80px;
     display:block;
 }
 .narrow-piece{
-    width:550px;
+    width:550px!important;
     margin:auto;
     margin-bottom:80px;
     display:block;
@@ -531,24 +558,24 @@ footer ._goto-top:hover {
     display:grid;
     grid-template-columns: 33.33% 33.33% 33.33%;
 }
-.grid-3-2-ul li{
+.grid-3-2-ul > li{
     margin:0;
 }
-.grid-3-1-ul li{
+.grid-3-1-ul > li{
     margin:5px auto ;
     display: block;
     width: 90%;
     padding-left: 20px;
     border-left: 3pt gray solid;
 }
-.grid-3-1-ul li h1 {
+.grid-3-1-ul > li h1 {
     font-family: 'noto-eng', 'noto-kor';
     font-size: 12pt;
     position: relative;
     margin:auto;
     margin-left:0;
 }
-.grid-3-1-ul li p {
+.grid-3-1-ul > li p {
     font-family: 'noto-eng-i', 'noto-kor-i';
     font-size: 12pt;
     position: relative;
@@ -587,8 +614,8 @@ footer ._goto-top:hover {
     font-size:30px;font-weight:600;
     margin:auto;
     text-align:center;
-    left:50%;
-    transform: translateX(-50%);
+    /* left:50%;
+    transform: translateX(-50%); */
     margin-bottom:30px;
 }
 ._article-section > p{
@@ -613,7 +640,7 @@ footer ._goto-top:hover {
     margin-bottom: 20px;
     display: block;
 }
-
+/* 
 ._album-section hr{
     border:none;border-top:1px solid black;width:40%;opacity:0.5;margin:auto;
     margin-bottom:80px;
@@ -649,7 +676,7 @@ footer ._goto-top:hover {
     padding-bottom: 5px;
     margin-bottom: 20px;
     display: block;
-}
+} */
 
 .story {
     margin-bottom:40px;
@@ -828,3 +855,242 @@ footer ._goto-top:hover {
         padding-top:0px;
     }
 }
+
+.gform {
+    position: relative;
+    padding-bottom:40px;
+    border-bottom:1pt rgba(255,255,240,0.5) solid;
+}
+.gform fieldset{
+    border:none;
+    display: block;
+    margin-bottom: 20px;
+}
+.gform fieldset label {
+    position:relative;
+    display: block;
+    width:100%;
+    font-family: 'noto-eng', 'noto-kor';
+    font-size: 14pt;
+    padding-left: 5px;
+    color: #fffff4;
+    opacity:0.9;
+    margin-bottom: 5px;
+}
+.gform fieldset input:disabled,
+.gform fieldset input {
+    position:relative;
+    display: block;
+    width:100%;
+    height: 50px;
+    border-radius: 10px;
+    border:none;
+    font-family: 'noto-eng-i', 'noto-kor-i';
+    font-size: 13pt;
+    padding-left:15px;
+    padding-right:15px;
+    color:black;
+    opacity:0.4;
+    transition:0.4s ease-in-out;
+}
+.gform fieldset input:focus {
+    outline:none;
+    opacity:1;
+    transition:0.4s ease-in-out;
+}
+.gform fieldset textarea:disabled,
+.gform fieldset textarea {
+    position:relative;
+    display: block;
+    width:100%;
+    height: 200px;
+    border-radius: 10px;
+    border:none;
+    font-family: 'noto-eng-i', 'noto-kor-i';
+    font-size: 13pt;
+    padding-top:10px;
+    padding-bottom:10px;
+    padding-left:15px;
+    padding-right:15px;
+    color:black;
+    resize:none;
+    opacity:0.4;
+    transition:0.4s ease-in-out;
+}
+.gform fieldset textarea:focus {
+    outline:none;
+    opacity:1;
+    transition:0.4s ease-in-out;
+}
+.gform button {
+    font-family: 'noto-eng', 'noto-kor';
+    font-size: 13pt;
+    border:none;
+    border-radius: 10px;
+    width:150px;
+    height:50px;
+    color:#fffff4;
+    background-color: #222222;
+    opacity:0.8;
+    right:0px;
+    margin-top: 10px;
+}
+.gform button:focus,
+.gform button:hover {
+    outline:none;
+    background: #e2e2da;
+    color:#111111;
+    transition:0.2s ease-in-out;
+    cursor:pointer;
+}
+.gform button:disabled{
+    outline:none;
+    background: #dddddd;
+    color:#777777;
+}
+.gform .honeypot-field {
+    display: none;
+}
+.thankyou_message:before{
+    height:509.675px;
+    line-height: 509.675px;
+    color: black;
+}
+.thankyou_message:after{
+    height:100px;
+    line-height: 100px;
+    color: #fffff4;
+}
+.thankyou_message{
+    height:509.675px;
+    line-height: 509.675px;
+    margin:auto;
+    border-radius: 10px;
+    text-align:center;
+    background-color: #777777;
+    animation: blink;
+    animation-duration: 1.5s;
+    animation-delay: 0.5s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+.contactlinks{
+    text-align: center;
+    padding-left: 10%;
+    padding-right: 10%;    
+    color: #fffff4;
+    opacity:0.9;
+    font-family: 'noto-eng-i', 'noto-kor-i';
+    font-size:12pt;
+}
+.contactlinks a{
+    font-family: 'noto-eng', 'noto-kor';
+    font-weight: 900;
+    color: #fffff4;
+    text-decoration: none;
+    font-size:12pt;
+}
+.contactlinks a:hover{
+    border-bottom: 0.5pt #fffff4 solid;
+    transition: 0.4s linear;
+}
+        
+@keyframes blink {
+    0% {
+        color:black;
+        height:509.675px;
+        line-height: 509.675px;
+        background-color: #777777;
+    }
+    10% {
+        background-color: #333333;
+    }
+    20% {
+        background-color: #777777;
+    }
+    30% {
+        background-color: #333333;
+    }
+    40% {
+        background-color: #777777;
+    }
+    60% {
+        height:509.675px;
+        line-height: 509.675px;
+        color:black;
+    }
+    100% {
+        height:100px;
+        line-height: 100px;
+        color:#fffff4;
+        background-color: #777777;
+    }
+}
+
+
+
+.post-head .post-info *{position:relative}
+.post-head .post-info{position:relative;margin-top:180px;margin-bottom:50px;z-index:900;text-align:left}
+.post-head .post-publish {position:relative;text-align:left;margin:0;margin-right:auto;font-family:"noto-eng-b","noto-kor-b";font-size:13pt;color:#fffff4}
+.post-head .post-publish a {color:inherit;text-decoration:none;font-family:inherit;font-size:inherit}
+.post-head .post-title {position:relative;font-family:"noto-eng-b", "noto-kor-b";font-size:35pt;padding:0;margin:0px;color:white}
+.post-head .post-keywords {position:relative;list-style-type:none;margin:0px 0px;padding:0;width:100%;display:inline-block}
+.post-head .post-keyword {position:relative;background-color:rgba(255,255,243,0.6);border-radius:5px;padding:0px 6px;padding-bottom:2px;margin:5px 5px;display:inline-block}
+.post-head .post-keyword a {color:rgb(50,50,58);font-family:"noto-eng","noto-kor";font-size:10pt;text-decoration:none}
+.post-head .post-update {position:relative;text-align:left;margin:30px 0;margin-right:auto;font-family:"noto-eng-ii","noto-kor-ii";font-size:9pt;color:#fffff4} 
+.inside-post .post-abstract {border-radius:10px;margin:50px auto;padding:50px;background-color:rgba(220,220,215,0.3);text-align:center;color:#505060;font-family:'noto-eng','noto-kor';font-size:12pt}
+
+.post-section {z-index: 0;position: relative;height:auto;display:block;padding-top:50px;padding-bottom:40px;}
+.post-section * {position: relative;font-family: 'noto-eng', 'noto-kor';}
+.post-section hr {border:none;border-top:1px solid black;width:20%;opacity:0.5;margin:auto;margin-bottom:80px}
+.post-section > h1 {font-family: 'noto-eng-b', 'noto-kor-b';font-size:30px;font-weight:600;margin:auto;text-align:center;margin-bottom:30px}
+.post-section > p {left:50%;transform: translateX(-50%);text-align:center;font-size:15px;font-family:'noto-eng-ii', 'noto-kor-ii';width: 40%;margin-bottom:30px}
+.post-subsection h1 {font-family: 'noto-eng-b', 'noto-kor-b';text-align:left;font-size:18pt;border-bottom: 1px solid rgba(0,0,0,0.3);padding-bottom: 5px;margin-bottom: 20px;display: inline-block}
+.post-subsection p {font-family: 'noto-eng', 'noto-kor';text-align:left;font-size:12pt;padding-bottom:5px;margin-bottom:20px;display:block}
+.post-section a {color:inherit;font-size:inherit;font-family:inherit;text-decoration: none;border-bottom: dashed 1pt rgba(0,0,0,0.6)}
+
+.related-posts {padding:50px;border-top:1pt solid rgba(0,0,0,0.8);margin:auto;background-color: none;}
+.related-posts > h1 {position:relative;margin:0;font-family:'noto-eng-b','noto-kor-b';font-size:18pt}
+.related-posts > ul {list-style-type: square;list-style-position: inside}
+.related-posts > ul > li {margin:10px 0px}
+.related-posts > ul > li > a {font-family: 'noto-eng','noto-kor';font-size:12pt;text-decoration:none;color:black;border-bottom:1pt solid rgba(0,0,0,0);}
+.related-posts > ul > li > a:hover {border-bottom:1pt solid rgba(0,0,0,1);transition:0.4s ease-in-out}
+.related-posts > ul > li > p {font-family:'noto-eng-i','noto-kor-i';font-size:12pt;display:inline-block}
+
+.post-footer{margin-top:80px;background-color:rgba(220,220,220,0.5);width:100%}
+
+.tagged-posts {padding:50px 0px;border-bottom:1pt gray dashed}
+.tagged-posts > h1 {font-family:'noto-eng-b','noto-kor-b';font-size:25pt;text-align:center;color:black}
+.tagged-posts > ul > li {margin:20px 0px}
+.tagged-posts > ul > li > a {font-family:'noto-eng','noto-kor';font-size:15pt;text-align:left;color:black;text-decoration:none;}
+
+
+.load-posts {width:100%}
+.load-posts a {border:none;}
+.list-posts > div {display:flex;margin:auto;justify-content:center;}
+.list-posts > div *{font-family:'noto-eng-ii';font-size:10pt;text-align:center;padding:5px}
+.list-posts > div > .first, .list-posts > div > .prev {margin-left:0px;margin-right:10px;cursor:pointer}
+.list-posts > div > .next, .list-posts > div > .last {margin-right:0px;margin-left:10px;cursor:pointer}
+.list-posts > div > .number{width:45px!important;text-align: center;font-family:'noto-eng-i';font-size:11pt;}
+.load-posts > ul {width:100%;border-radius:10pt;background-color:rgba(200,255,200,0.3);list-style-type:none;}
+.load-posts > ul > li {padding:20px 10px;margin:20px 10px}
+.load-posts > ul > li:hover {background:rgba(200,255,200,0.8)}
+.load-posts > ul > li .post-title {margin:0px 0px!important;padding:0!important;color:black!important;font-family:'noto-eng-b','noto-kor-b'!important;font-size:15pt}
+.load-posts > ul > li .post-publish {margin:0px 2px!important;padding:0!important;color:black!important;font-family:"noto-eng-ii","noto-kor-ii"!important;font-size:8pt}
+.load-posts > ul > li .post-publish a {color:inherit;text-decoration:none;font-family:inherit;font-size:inherit}
+.load-posts > ul > li .post-abstract {margin:20px 0px!important;padding:0!important;color:black!important;width:100%!important;font-family:"noto-eng","noto-kor"!important;font-size:10pt;overflow:hidden;word-break:break-all;}
+.load-posts > ul > li .post-keywords {position:relative;list-style-type:none;margin:0px;padding:0;width:100%;display:inline-block}
+.load-posts > ul > li .post-keyword {position:relative;background-color:rgba(125,150,125,0.5);border-radius:5px;padding:0px 3px;padding-bottom:2px;margin:0px 0px;display:inline-block;border:none}
+.load-posts > ul > li .post-keyword a {color:black;font-family:"noto-eng","noto-kor";font-size:9pt;text-decoration:none}
+.load-posts > ul > li .post-link {margin:0px!important;padding:0!important;color:gray!important;width:100%!important;font-family:"noto-eng","noto-kor"!important;font-size:12pt;text-decoration:none;}
+.maxheight-abstract-ul > li .post-abstract {height:80px;overflow:hidden}
+.post-with-description {background:none!important;border-left:3pt rgba(24,24,32,0.8) solid;border-radius:0!important;}
+.post-with-description > li {border-radius:10px;}
+.post-with-description > li > div {padding:10px;border-radius:10px;}
+.post-with-description > li > div .post-keyword{background-color:rgba(24,24,32,0.2)!important;}
+.post-with-description > li:hover {background:rgba(24,24,32,0.05)!important}
+.post-with-description .description {font-family:'noto-eng','noto-kor';font-size:12pt;color:black;margin:15px 10px;margin-bottom:0px;padding:0px 10px;border-left:3pt gray solid}
+#related-posts {border-top:1pt solid black; padding:30px}
+
+.hot-tags{background-color: rgba(24,24,32,0.9);padding:15px;border-radius:10px;margin-bottom:10px}
+.hot-tags a {border:none}
