--- a/css/style.css
+++ b/css/style.css
@@ -617,17 +617,13 @@ footer ._goto-top:hover {
     font-size:30px;font-weight:600;
     margin:auto;
     text-align:center;
-    /* left:50%;
-    transform: translateX(-50%); */
     margin-bottom:30px;
 }
 ._article-section > p{
-    right:50%;
-    transform:translateX(50%);
-    /* left:50%;
-    transform: translateX(-50%); */
-    text-align:center;font-size:15px;font-family:'noto-eng-ii', 'noto-kor-ii';
     width: 40%;
+    left:50%;
+    transform: translateX(-50%);
+    text-align:center;font-size:15px;font-family:'noto-eng-ii', 'noto-kor-ii';
     margin-bottom:30px;
 }
 ._article-section > .subsection > h1 {
@@ -728,10 +724,9 @@ footer ._goto-top:hover {
     }
     ._profile > a{
         font-size: 40pt;
+        width:100%;
         right:50%;
         transform: translateX(50%);
-        /* left:50%;
-        transform: translateX(-50%); */
         text-align:center;
     }
     ._profile > p{
@@ -896,20 +891,17 @@ footer ._goto-top:hover {
 .gform button {
     font-family: 'noto-eng', 'noto-kor';
     position:relative;
-    /* left:50%;
-    transform: translateX(-50%); */
-    right:50%;
-    transform: translateX(50%);
+    width:150px;
     font-size: 13pt;
     border:none;
     border-radius: 10px;
-    width:150px;
     height:50px;
     color:#fffff4;
     background-color: #222222;
     opacity:0.8;
-    right:0px;
     margin-top: 10px;
+    left:50%;
+    transform: translateX(-50%);
 }
 .gform button:focus,
 .gform button:hover {
@@ -1021,7 +1013,7 @@ footer ._goto-top:hover {
 .post-section * {position: relative;font-family: 'noto-eng', 'noto-kor';}
 .post-section hr {border:none;border-top:1px solid black;width:20%;opacity:0.5;margin:auto;margin-bottom:80px}
 .post-section > h1 {font-family: 'noto-eng-b', 'noto-kor-b';font-size:30px;font-weight:600;margin:auto;text-align:center;margin-bottom:30px}
-.post-section > p {right:50%;transform: translateX(50%);text-align:center;font-size:15px;font-family:'noto-eng-ii', 'noto-kor-ii';width: 40%;margin-bottom:30px}
+.post-section > p {width: 40%;left:50%;transform: translateX(-50%);text-align:center;font-size:15px;font-family:'noto-eng-ii', 'noto-kor-ii';margin-bottom:30px}
 .post-subsection h1 {font-family: 'noto-eng-b', 'noto-kor-b';text-align:left;font-size:18pt;border-bottom: 1px solid rgba(0,0,0,0.3);padding-bottom: 5px;margin-bottom: 20px;display: inline-block}
 .post-subsection p {font-family: 'noto-eng', 'noto-kor';text-align:left;font-size:12pt;padding-bottom:5px;margin-bottom:20px;display:block}
 .post-section a {color:inherit;font-size:inherit;font-family:inherit;text-decoration: none;border-bottom: dashed 1pt rgba(0,0,0,0.6)}
